region_scoreboard.js: fixing width of tables to prevent width changes after scrollbar appearance

--- a/core/style.css
+++ b/core/style.css
@@ -1223,6 +1223,9 @@ table.artifact .portal {
 .cellscore .ui-accordion-header-active:before {
 	content: "⊟";
 }
+.cellscore table {
+  width: 385px;
+}
 
 /* prevent nonfunctional horizontal scrollbar in Chrome (perhaps jQuery issue) */
 .cellscore .historychart > div {
